Commit from Bungeni: Pootle Localisation Portal by user flavio.: 1051 of 1051 messages translated (0 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/es/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/es/LC_MESSAGES/bungeni.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Wed Jul 26 17:45:52 2011\n"
-"PO-Revision-Date: 2011-08-03 18:35+0300\n"
+"PO-Revision-Date: 2011-08-04 23:18+0300\n"
 "Last-Translator: Flavio <flavio.zeni@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: es\n"
@@ -82,11 +82,11 @@ msgstr "programación"
 #: src/bungeni.main/bungeni/ui/rss.py:174
 #: src/bungeni.main/bungeni/ui/rss.py:175
 msgid "Committees"
-msgstr "comités"
+msgstr "comisiones"
 
 #: src/bungeni.main/bungeni/core/app.py:156
 msgid "Committee schedules"
-msgstr "comités"
+msgstr "comisiones"
 
 #: src/bungeni.main/bungeni/core/app.py:159
 #: src/bungeni.main/bungeni/core/app.py:248
@@ -149,7 +149,7 @@ msgstr "lo que está en"
 
 #: src/bungeni.main/bungeni/core/app.py:205
 msgid "View committees created by the current parliament"
-msgstr "comités de vista creada por el actual Parlamento"
+msgstr "comisiones de vista creada por el actual Parlamento"
 
 #: src/bungeni.main/bungeni/core/app.py:209
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2422
@@ -563,7 +563,7 @@ msgstr "Levantamiento de la primera lectura"
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:183
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:53
 msgid "Submit Bill to Select Committee (I)"
-msgstr "presente proyecto de ley al comité especial (i)"
+msgstr "presente proyecto de ley a la comisión especial (i)"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:186
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:46
@@ -612,37 +612,37 @@ msgstr "Levantamiento de segunda lectura"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:36
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:64
 msgid "Allow scheduling of Whole House Committee"
-msgstr "con posibilidad de programar toda Comité de la Cámara"
+msgstr "con posibilidad de programar en la sesión plenaria"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:213
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:35
 msgid "Allow scheduling/rescheduling of Whole House Committee"
-msgstr "permitir la programación / reprogramación de comité de toda la casa"
+msgstr "permitir la programación / reprogramación en la sesión plenaria"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:216
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:61
 msgid "Schedule Whole House Committee"
-msgstr "horario de todo el comité de casa"
+msgstr "horario de la sesión plenaria"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:219
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:52
 msgid "Reschedule Whole House Committee"
-msgstr "reprogramar comité de toda la casa"
+msgstr "reprogramar la sesión plenaria"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:222
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:56
 msgid "Adjourn Whole House Committee"
-msgstr "Levantamiento de comité de toda la casa"
+msgstr "Levantamiento de la sesión plenaria"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:225
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:33
 msgid "Submit Bill to Select Committee (II)"
-msgstr "presente proyecto de ley al comité especial (ii)"
+msgstr "presente proyecto de ley a la comisión especial (ii)"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:228
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:40
 msgid "Submit/Resubmit Bill to Select Committee (II)"
-msgstr "enviar / reenviar proyecto de ley al comité especial (ii)"
+msgstr "enviar / reenviar proyecto de ley a la comisión especial (ii)"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:231
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:34
@@ -1246,7 +1246,7 @@ msgstr "proyecto de ley rechazado"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:22
 msgid "Submitted to Select Committee (after 1st reading)"
-msgstr "presentados para seleccionar comité (después de 1 ª lectura)"
+msgstr "presentados para a la comisión (después de 1 ª lectura)"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:224
 msgid "Archived"
@@ -1359,7 +1359,7 @@ msgstr "crear documento presentado"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:29
 msgid "Submitted to Select Committee (after 2nd reading)"
-msgstr "presentados para seleccionar comité (después de 2 ª lectura)"
+msgstr "presentados para la comisión (después de 2 ª lectura)"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:293
 msgid "Create Tabled Document (On behalf of)"
@@ -1392,15 +1392,15 @@ msgstr "crear proyecto de ley"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:384
 msgid "Active Committee"
-msgstr "activos del comité"
+msgstr "comisión activa"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:385
 msgid "Committee is Dissolved"
-msgstr "comité se disuelve"
+msgstr "comisión se disuelve"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:386
 msgid "Draft - Committee not yet Active"
-msgstr "proyecto: el comité aún no está activo"
+msgstr "proyecto: comisión aún no está activo"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:393
 msgid "Active Parliament"
@@ -1678,7 +1678,7 @@ msgstr "conectarse de forma segura al servidor de correo (con TLS)"
 
 #: src/bungeni.main/bungeni/models/interfaces.py:361
 msgid "Title of document assignment to group or committee"
-msgstr "título de asignación de documentos a un grupo o comité"
+msgstr "título de asignación de documentos a un grupo o comisión"
 
 #: src/bungeni.main/bungeni/models/interfaces.py:363
 msgid "Start date of document assignment"
@@ -1893,23 +1893,23 @@ msgstr "editar sentado"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:180
 msgid "Add committee member"
-msgstr "Añadir miembro del comité"
+msgstr "Añadir miembro del comisión"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:181
 msgid "Edit committee member"
-msgstr "edición, miembro del comité"
+msgstr "edición, miembro del comisión"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:182
 msgid "Delete committee member"
-msgstr "eliminar el miembro del comité"
+msgstr "eliminar el miembro del comisión"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:183
 msgid "View committee member"
-msgstr "Ver el miembro del comité"
+msgstr "Ver el miembro del comisión"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:189
 msgid "Add committee staff"
-msgstr "añadir comité de personal"
+msgstr "añadir personal de la comisión "
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:19
 #: src/bungeni.main/bungeni/models/permissions.zcml:20
@@ -1918,15 +1918,15 @@ msgstr "eliminar sentado"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:190
 msgid "Edit committee staff"
-msgstr "editar comité de personal"
+msgstr "editar personal de la comisión"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:191
 msgid "Delete committee staff"
-msgstr "eliminar comité de personal"
+msgstr "eliminar personal de la comisión"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:192
 msgid "View committee staff"
-msgstr "punto de vista personal del comité"
+msgstr "ver personal de la comisión"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:198
 msgid "Add political group member"
@@ -2074,15 +2074,15 @@ msgstr "vista del documento asignado a un grupo o comité"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:261
 msgid "Assign a document to a group or committee"
-msgstr "asignar un documento a un grupo o comité"
+msgstr "asignar un documento a un grupo o comisión"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:262
 msgid "Delete document assignment to a group or committee"
-msgstr "eliminar la asignación de documentos a un grupo o comité"
+msgstr "eliminar la asignación de documentos a un grupo o comisión"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:263
 msgid "Edit document assignment to a group or committee"
-msgstr "modificar la asignación de documentos a un grupo o comité"
+msgstr "modificar la asignación de documentos a un grupo o comisión"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:267
 msgid "Permission to generate report"
@@ -2134,19 +2134,19 @@ msgstr "eliminar la asistencia sentado"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:36
 msgid "Add committee"
-msgstr "añadir comité"
+msgstr "añadir comisión"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:37
 msgid "Edit committee"
-msgstr "edición del comité"
+msgstr "editar comisión"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:38
 msgid "Delete committee"
-msgstr "eliminar comité"
+msgstr "eliminar comisión"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:39
 msgid "View committee"
-msgstr "punto de vista del comité"
+msgstr "ver comisión"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:42
 msgid "Add Question"
@@ -2330,7 +2330,7 @@ msgstr "miembro del gobierno"
 
 #: src/bungeni.main/bungeni/models/roles.zcml:24
 msgid "Committee Member"
-msgstr "miembro del comité"
+msgstr "miembro de la comisión"
 
 #: src/bungeni.main/bungeni/ui/attendance.py:142
 #: src/bungeni.main/bungeni/ui/forms/common.py:360
@@ -2563,23 +2563,23 @@ msgstr "fecha de la disolución"
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1220
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1226
 msgid "Committee type status"
-msgstr "comités de tipos de estado"
+msgstr "comisión  de tipos de estado"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1221
 msgid "Committee type statuses"
-msgstr "comités de estados de tipo"
+msgstr "comisión de estados de tipo"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1234
 msgid "Committee type"
-msgstr "comité de tipo"
+msgstr "tipo de comisión"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1235
 msgid "Committee types"
-msgstr "comités de tipos"
+msgstr " tipos de comisión"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1240
 msgid "Committee Type"
-msgstr "comité de tipo"
+msgstr "tipo de comisión"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1248
 msgid "life span"
@@ -2591,7 +2591,7 @@ msgstr "perfil"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1287
 msgid "Type of committee"
-msgstr "tipo de comité"
+msgstr "tipo de comisión"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1295
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1455
@@ -2885,7 +2885,7 @@ msgstr "grupos asignados"
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1967
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1974
 msgid "Committee"
-msgstr "comité"
+msgstr "comisión"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1982
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2010
@@ -3405,7 +3405,7 @@ msgstr "fecha de finalización debe ser posterior a la fecha de inicio"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:400
 msgid "A committee must be disolved before it can be reinstated"
-msgstr "un comité debe ser disuelto antes de que pueda ser reintegrado"
+msgstr "una comisión debe ser disuelto antes de que pueda ser reintegrado"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:409
 msgid "A person cannot be active and substituted at the same time"
@@ -4135,11 +4135,11 @@ msgstr "añadir el tipo de asistencia ..."
 
 #: src/bungeni.main/bungeni/ui/menu-vocabularies.zcml:50
 msgid "Add committee type..."
-msgstr "añadir el tipo del comité ..."
+msgstr "añadir a tipo de comisión"
 
 #: src/bungeni.main/bungeni/ui/menu-vocabularies.zcml:57
 msgid "Add committee type status..."
-msgstr "añadir Comisión del Estatuto del tipo ..."
+msgstr "añadir comisión del estatuto del tipo ..."
 
 #: src/bungeni.main/bungeni/ui/menu-vocabularies.zcml:64
 msgid "Add postal type..."
@@ -4370,7 +4370,7 @@ msgstr "agregar la dirección de los grupos políticos ..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:205
 msgid "The 'Add...' menu - for committees"
-msgstr "&quot;Añadir ...&quot; menú - para los comités de"
+msgstr "&quot;Añadir ...&quot; menú - para los comisiones de"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:218
 #: src/bungeni.main/bungeni/ui/menu.zcml:710
@@ -4398,7 +4398,7 @@ msgstr "añadir sentado ..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:258
 msgid "Add Committee Address..."
-msgstr "agregar la dirección del comité ..."
+msgstr "agregar la dirección del comisión ..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:267
 msgid "The 'Add...' menu - for a Parliament"
@@ -4500,7 +4500,7 @@ msgstr "Agregar evento ..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:531
 msgid "Assign bill to a committee..."
-msgstr "proyecto de ley para asignar un comité ..."
+msgstr " asignar proyecto de ley para uns comisión ..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:54
 msgid "Actions for Calendar Sittings"
@@ -4622,7 +4622,7 @@ msgstr "añadir el parlamento ..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:798
 msgid "Add Committee..."
-msgstr "añadir comité ..."
+msgstr "añadir comisión ..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:805
 #: src/bungeni.main/bungeni/ui/menu.zcml:1004
@@ -4673,7 +4673,7 @@ msgstr "añadir región ..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:899
 msgid "Add Committee Member..."
-msgstr "Añadir miembro del comité ..."
+msgstr "Añadir miembro de la comisión ..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:906
 msgid "Add Committee Staff..."
