Commit from Bungeni: Pootle Localisation Portal by user flavio.: 1051 of 1051 messages translated (0 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/es/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/es/LC_MESSAGES/bungeni.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Wed Jul 26 17:45:52 2011\n"
-"PO-Revision-Date: 2011-08-04 23:27+0300\n"
+"PO-Revision-Date: 2011-08-04 23:35+0300\n"
 "Last-Translator: Flavio <flavio.zeni@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: es\n"
@@ -4250,7 +4250,7 @@ msgstr "Mover el elemento hacia abajo"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:1310
 msgid "Home"
-msgstr "casa"
+msgstr "inicio"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:1353
 #: src/bungeni.main/bungeni/ui/menu.zcml:1361
