Commit from Bungeni: Pootle Localisation Portal by user flavio.: 1051 of 1051 messages translated (0 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/es/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/es/LC_MESSAGES/bungeni.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Wed Jul 26 17:45:52 2011\n"
-"PO-Revision-Date: 2011-08-04 23:35+0300\n"
+"PO-Revision-Date: 2011-08-05 19:08+0300\n"
 "Last-Translator: Flavio <flavio.zeni@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: es\n"
@@ -145,7 +145,7 @@ msgstr "administrar la configuración de bungeni"
 #: src/bungeni.main/bungeni/core/app.py:195
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:12
 msgid "What's on"
-msgstr "lo que está en"
+msgstr "qué hace"
 
 #: src/bungeni.main/bungeni/core/app.py:205
 msgid "View committees created by the current parliament"
@@ -204,11 +204,11 @@ msgstr "ver los mociones se trasladó en el actual Parlamento"
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:145
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:151
 msgid "Tabled documents"
-msgstr "documentos presentados"
+msgstr "documentos"
 
 #: src/bungeni.main/bungeni/core/app.py:231
 msgid "View the documents tabled in the current parliament"
-msgstr "Ver los documentos presentados en el parlamento actual"
+msgstr "Ver los documentos presentatos en el parlamento actual"
 
 #: src/bungeni.main/bungeni/core/app.py:236
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2286
@@ -218,7 +218,7 @@ msgstr "Ver los documentos presentados en el parlamento actual"
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:171
 #: src/bungeni.main/bungeni/ui/viewlets/templates/whatson.pt:177
 msgid "Agenda items"
-msgstr "los temas del programa"
+msgstr "temas"
 
 #: src/bungeni.main/bungeni/core/app.py:238
 msgid "View the agenda items of the current parliament"
