Commit from Bungeni: Pootle Localisation Portal by user flavio.: 1051 of 1051 messages translated (0 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/es/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/es/LC_MESSAGES/bungeni.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Wed Jul 26 17:45:52 2011\n"
-"PO-Revision-Date: 2011-08-05 19:08+0300\n"
+"PO-Revision-Date: 2011-08-05 19:24+0300\n"
 "Last-Translator: Flavio <flavio.zeni@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: es\n"
@@ -2913,7 +2913,7 @@ msgstr "tipo de archivo"
 #: src/bungeni.main/bungeni/ui/forms/templates/version-attached-files.pt:12
 #: src/bungeni.main/bungeni/ui/forms/templates/attached-files.pt:12
 msgid "Status date"
-msgstr "estado de la fecha"
+msgstr "fecha estado"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2063
 msgid "Attached file version"
@@ -2969,7 +2969,7 @@ msgstr "Fecha de presentación"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2158
 msgid "Status Date"
-msgstr "estado de la fecha"
+msgstr "fecha estado"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2168
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2230
@@ -3009,7 +3009,7 @@ msgstr "propietario"
 #: src/bungeni.main/bungeni/ui/menu.zcml:1245
 #: src/bungeni.main/bungeni/ui/menu.zcml:1277
 msgid "Agenda item"
-msgstr "relación con el tema"
+msgstr "tema"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2323
 msgid "Agenda Item version"
@@ -5249,7 +5249,7 @@ msgstr "tipo de elemento"
 
 #: src/bungeni.main/bungeni/ui/workspace.py:39
 msgid "status date"
-msgstr "estado de la fecha"
+msgstr "fecha estado"
 
 #~ msgid "View Agenda and Minutes reports of the current parliament"
 #~ msgstr ""
