Commit from Bungeni: Pootle Localisation Portal by user murithi.: 1051 of 1051 messages translated (0 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/es/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/es/LC_MESSAGES/bungeni.po
@@ -3,8 +3,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Wed Jul 26 17:45:52 2011\n"
-"PO-Revision-Date: 2011-08-05 19:24+0300\n"
-"Last-Translator: Flavio <flavio.zeni@gmail.com>\n"
+"PO-Revision-Date: 2011-08-11 09:05+0300\n"
+"Last-Translator: Amin <amin@assemblenationale.cm>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
@@ -4082,7 +4082,7 @@ msgstr "Añadir evento"
 
 #: src/bungeni.main/bungeni/ui/forms/viewlets.py:636
 msgid "Timeline"
-msgstr "línea de tiempo"
+msgstr "historia"
 
 #: src/bungeni.main/bungeni/ui/forms/viewlets.py:752
 #: src/bungeni.main/bungeni/ui/forms/templates/mp_item_viewlet.pt:1
@@ -4766,7 +4766,7 @@ msgstr "los cambios de"
 #: src/bungeni.main/bungeni/ui/rss.py:436
 #: src/bungeni.main/bungeni/ui/rss.py:452
 msgid "timeline"
-msgstr "cronología"
+msgstr "historia"
 
 #: src/bungeni.main/bungeni/ui/search.py:123
 msgid "Query"
