Commit from Bungeni: Pootle Localisation Portal by user murithi.: 1051 of 1051 messages translated (0 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
@@ -3,8 +3,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Wed Jul 13 12:37:52 2011\n"
-"PO-Revision-Date: 2011-07-26 22:03+0300\n"
-"Last-Translator: Flavio <flavio.zeni@gmail.com>\n"
+"PO-Revision-Date: 2011-08-23 16:37+0300\n"
+"Last-Translator: Murithi <bungeni.translator@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
@@ -1436,7 +1436,7 @@ msgstr "public event"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:425
 msgid "Published"
-msgstr "publish"
+msgstr "published"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:426
 msgid "Create Report"
