Commit from Bungeni: Pootle Localisation Portal by user murithi.: 1051 of 1051 messages translated (0 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/en-ke/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/en-ke/LC_MESSAGES/bungeni.po
@@ -3,13 +3,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Wed Jul 13 12:37:52 2011\n"
-"PO-Revision-Date: 2011-07-12 13:22+0300\n"
+"PO-Revision-Date: 2011-08-23 16:49+0300\n"
 "Last-Translator: Murithi <bungeni.translator@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: en_KE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en_KE\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.0.4\n"
 "Language-Code: en_KE\n"
@@ -1437,7 +1437,7 @@ msgstr "public event"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:425
 msgid "Published"
-msgstr "publish"
+msgstr "published"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:426
 msgid "Create Report"
