Edited wiki page Bungeni_System_Configuration_Management_Customization through web user interface.

--- a/wiki/Bungeni_System_Configuration_Management_Customization.wiki
+++ b/wiki/Bungeni_System_Configuration_Management_Customization.wiki
@@ -1,7 +1,5 @@
 #summary Bungeni UI for system configuration,management and customization
 
-= Bungeni System Configuration, Management and Customization User Interface = 
-
 <wiki:toc max_depth="6" />
 
 
@@ -11,7 +9,7 @@ Bungeni provides various ways to configure, customize and manage the application
 
 = Configuration, Customization and Management external to Bungeni sub-system = 
 
-All the below options are accessible external to the Bungeni application and its constraints. These changes require access to the file system, and to the source of the system. It is not advisable to make these changes on a live system - but instead on a test system.
+All the below options are accessible external to the Bungeni application and its constraints. These changes require access to the file system, and to the source of the system. It is not advisable to make these changes on a live system - but instead on a test system, since it is possible some changes could adversely affect the system (i.e. bring it down )  
 
 
 == System Level Management == 
@@ -30,10 +28,12 @@ Fabric is a set of python libraries which allow automation and scripting of repe
    * etc...
 
 === Configuration files ===
+
 Fabric itself uses an ini file for configuring installation parameters.
 
 
 === Access === 
+
 Fabric commands are run from the terminal, and requires shell access to the system os - as it interacts with the bash interpreter and other operating system utilities like the package manager.
 
 
@@ -46,9 +46,11 @@ Bungeni forms can be customized per content type in the following ways :
   * Which fields can be shown in listings or in other specific modes (In add, view and edit modes )
 
 === Configuration files === 
+
 The forms are customized by changing an xml file called ui.xml which describes the forms, the order of fields and the visibility per field by role.
 
 === Access === 
+
 The xml file resides on the file system. Changing the file requires access to the file system
 
 
@@ -60,9 +62,11 @@ Bungeni workflows can be customized per content type in the following ways :
     * Define / modify workflow transitions between states
 
 === Configuration files === 
+
 The workflows are customized by changing individual xml files named after the content types. The xml files describes, states, grants and transitions.
 
 === Access ===
+
 The xml files reside on the file system. Changing the file requires access to the file system.
 
 
@@ -73,9 +77,11 @@ Bungeni workspaces can be customized per content type in the following ways:
      * every state defines the tabs for the workspace and what roles are applicable for the tabs
 
 === Configuration files === 
+
 The workspaces are customized by changing individual xml files named after the content types. 
 
 === Access ===
+
 The xml files reside on the file system. Changing the file requires access to the file system.
 
 == Workflow documentation == 
@@ -84,9 +90,11 @@ Bungeni provides a workflow documentation generator. This can be a useful tool, 
 The documentation is generate from the workflow xml files.
 
 === Configuration files === 
+
 XHTML files on the file system
 
 === Access === 
+
 The documentation is generated via a shell script. Running it requires shell access.
 
 
@@ -95,9 +103,11 @@ The documentation is generated via a shell script. Running it requires shell acc
 Bungeni uses a postgres relational database. The connection string to connect to the db is customizable. This could change if the db is deployed on a different server.
 
 === Configuration files === 
+
 XML files (in zcml format) on the file system
 
 === Access === 
+
 The zcml file resides on the file system. File system access is required to modify it.
 
 == OpenOffice configuration == 
@@ -105,9 +115,11 @@ The zcml file resides on the file system. File system access is required to modi
 Bungeni uses openoffice for document conversion and report generation purposes. The configuration for openoffice lets Bungeni know which openoffice installation to use.
 
 === Configuration files === 
+
 XML files (in zcml format) on the file system
 
 === Access === 
+
 The zcml file resides on the file system. File system access is required to modify it.
 
 == Default Roles and Permissions === 
@@ -115,9 +127,11 @@ The zcml file resides on the file system. File system access is required to modi
 Default roles and permissions of the system (including default grants) are configurable.
 
 === Configuration files === 
+
 XML files (in zcml format) on the file system
 
 === Access === 
+
 The zcml file resides on the file system. File system access is required to modify it.
 
 == Themes == 
@@ -125,9 +139,11 @@ The zcml file resides on the file system. File system access is required to modi
 Bungeni supports multiple themes. Themes can be switched via the fabric scripts. Themes are packaged as customizations.
 
 === Configuration files === 
+
 XHTML, CSS and image files on the file system
 
 === Access === 
+
 The files resides on the file system. Shell access required for modifying and customizing themes.
 
 
@@ -136,9 +152,11 @@ The files resides on the file system. Shell access required for modifying and cu
 Bungeni supports multiple languages.
 
 === Configuration  files === 
+
 PO files on the file system
 
 === Access === 
+
 The files resides on the file system. subversion access (via fabric) required to update PO files.
 
 
@@ -147,16 +165,20 @@ The files resides on the file system. subversion access (via fabric) required to
 Bungeni supports applying subject terms to content. The subject are a hierarchical list of items, and appear in a subject-term selector widget.
 
 === Configuration  files === 
+
 XML file (in VDEX format) on the file system.
 
 === Access === 
+
 The files resides on the file system. File system access required to update file.
 
 
 = Configuration, Customization and Management internal to Bungeni sub-system = 
 
-All the below options are accessible from within the Bungeni application. These changes require authenticated access to bungeni via a web browser.
-These settings do not use configuration files but instead store information in the same postgresql database used to store content.
+All the below options are accessible from within the Bungeni application. These changes require authenticated access to bungeni via a web browser, and the changes are made via web forms.
+
+These settings do not use configuration files but instead store information in the same postgresql database used to store content. These configurations do not change the logical behavior of the system or the system configuration, but instead these are "business  parameters" accessible within bungeni.
+
 
 == Content == 
 
@@ -177,8 +199,6 @@ Single button to re-index db
 == Vocabularies == 
 
 Vocabularies for different item typologies in bungeni (bill type, question type etc.)
-
-
 
 
 
